--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,10 @@ coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+
+# mushrooms
+setuptools==39.2.0
+pandas==0.23.4
+Click==7.0
+numpy==1.15.4
+scikit_learn==0.20.1
